# BusinessDS

./: README.md
Bike-Share/: _index.md  anom_scout.txt  anomaly-detection.ipynb  bike-share.ipynb  main.py  pyproject.toml
Bike-Share/.ipynb_checkpoints/: bike-share-checkpoint.ipynb
Reuters-Author/: NLP_Notebook.ipynb  Reuters_Authorship.ipynb  index.md  main.py  naive_bayes_results.pkl  pyproject.toml  svm_results.pkl
