[project]
name = "reuters-author"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "gensim>=4.4.0",
    "langdetect>=1.0.9",
    "nltk>=3.9.3",
    "pip>=26.0.1",
    "pyldavis>=3.4.1",
    "spacy>=3.8.11",
    "textacy>=0.13.0",
    "textblob>=0.19.0",
]
